EPBDS-14233 Format *.java